fixed: password verification
